src/App.css
.card-badges {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: flex-start;
  flex-wrap: wrap;
  margin: 0 0 12px 0;
}

.card-badges li {
  border: 1px solid rgba(0, 0, 0, 0.3);
  border-radius: 6px;
  padding: 3px;
  margin-right: 10px;
}

.card-details {
  display: flex;
  flex-direction:column;
}

.card-details li{
  display: flex;
  flex-direction: row;
}

.connect .container {
  display: flex;
  flex-direction: row;
}

.connect .container .logo {
  width: 100%;
}

.connect img {
  border-radius: 50%;
  height: 70%;
  width: 70%;
}

.profile, .education, .experience, .technology, .connect {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100vh;
  min-height: 100%;
  margin-left: 160px;
  text-align: center;
  width: auto;
}

.experience, .education {
  background-color: #77A076;
}

.experience .card, .education .card {
  width: 100%;
  background-color: transparent;
  padding-left: 2%;
  padding-right: 2%;
}

.experience .card-image img, .education .card-image img {
  border-radius: 50%;
  border: 1px solid white;
}

.green-header {
  background-color:#5ba15a;
  width: 100%;
}

.nav-item {
  margin-left: 0%;
  padding-top: 5px;
}

.profile, .technology, .connect {
  background-color:#039BE5;
  color: aliceblue;
}

.profile {
  background-color:#039BE5;
  height: 100%;
  color: aliceblue;
}


.profile-header, .blue-header {
  background-color:#058BCE;
  margin-bottom: 5px;
  width: 100%;
}

.profile-picture {
  border: 5px solid white;
  border-radius: 50%;
  height: 450px;
  width: 450px;
}

.side-nav {
  height: 100%;
  width: 160px;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color:#232323;
  overflow-x: hidden;
  padding-top: 25px;
  display: flex;
  flex-direction: column;
  align-items: left;
  box-shadow: 10px 0 3px 1px #232323;
}

.side-nav a:nth-child(2n+2) {
  color: #77A076;
}

.technology .card {
  background-color: aliceblue;
  height: 100px;
  margin-left: 5px;
  width: 100px;
}

.technology .container {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  flex: 1;
  justify-content: center;
  width: 100%;
}

.technology img {
  height: 100px;
  width: 100px;
}

.typewriter {
  display: inline-block;
}

.typewriter h2{
  overflow: hidden;
  border-right: .15em solid black;
  white-space: nowrap;
  margin: 0 auto;
  letter-spacing: .10em;
  animation: 
    typing 2s steps(40, end),
    blink-caret .75s step-end infinite;
}

h1 {
  font-family: 'Roboto', sans-serif;
}

label {
  color:aliceblue;
}

@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: black; }
}

@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

@media (max-width: 1000px) {
  .card .card-image img {
    display: none;
  }
}

@media (max-width: 900px) {
  .side-nav {
    display: none;
  }
  .profile, .education, .experience, .technology, .connect {
    margin: 0;
    width: 100vw;
  }
  .profile-picture {
    height: 30%;
    width: 30%;
  }
}

@media (max-width: 600px) {
  .connect .container {
    flex-direction: column;
  }
  .connect .container .Gmail {
    height: 75%;
    width: 65%;
  }
  .profile, .education, .experience, .technology, .connect {
    margin: 0;
    width: 100vw;
  }
  .profile-picture {
    height: 50%;
    width: 50%;
  }
  .technology .card, .technology img {
    height: 65px;
    width: 65px;
  }
  h1 {
    font-size: 30px;
  }
  h2 {
    font-size: 20px;
  }
}

